deploy/bases/imgproxy/imgproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: imgproxy
  labels:
    app: imgproxy
spec:
  selector:
    app: imgproxy
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: imgproxy
spec:
  selector:
    matchLabels:
      app: imgproxy
  replicas: 1
  template:
    metadata:
      labels:
        app: imgproxy
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: magento
                component: web
            topologyKey: kubernetes.io/hostname
      containers:
      - name: imgproxy
        image: darthsim/imgproxy:v3.27
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: media
          mountPath: /local/media
          subPath: media
          readOnly: true
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      - name: tmp
        emptyDir: {}
